# OrderAppFinal

./: CMakeLists.txt  Calculate Total.cpp  Calculate Total.h  README.md  UML.vpp  assetmanager.cpp  assetmanager.h  main.cpp
